test/expected/show_using-c++03.out
show using
     ^
6: error: "using" is not supported until C++11
